<resources>
    <string name="app_name">Appointment Book</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="appointment_book_owner">Appointment Book Owner</string>
    <string name="appointment_description">Appointment Description</string>
    <string name="appointment_begin_time">Appointment Begin Time</string>
    <string name="appointment_end_time">Appointment End Time</string>
    <string name="search_appointments">Search Appointments</string>
    <string name="view_all_appointments">View All Appointments</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="view_appointments">View Appointments</string>
    <string name="sam_huebschwerlen_nproject_5_n_nthis_appointment_book_application_can_perform_several_functions_n_n_add_appointments_n_1_select_add_appointment_button_from_main_screen_n_2_enter_information_and_select_add_appointment_button_n_n_n_search_for_appointments_n_1_select_search_appointment_button_from_main_screen_n_2_enter_owner_and_begin_and_end_time_to_find_n_appointments_beginning_between_said_times_n_3_then_select_search_appointments_button_n_n_n_view_all_appointments_n_1_select_view_all_appointments_button_from_main_screen_n2_then_enter_owners_names_and_select_view_button_n_n_n_ndate_and_time_should_be_in_the_format_nmm_dd_yyyy_hh_mm_am_pm_nend_time_can_not_be_before_begin_time_n_n_n_nif_the_owner_entered_does_not_exist_the_application_will_attempt_to_create_a_new_appointment_book_for_owner_to_save_appointments_to">Sam Huebschwerlen\nProject 5\n\nThis Appointment Book Application can perform several functions: \n\n – Add Appointments: \n 1) Select Add Appointment Button From Main Screen \n 2) Enter Information And Select Add Appointment Button \n\n\n – Search For Appointments: \n 1) Select Search Appointment Button From Main Screen \n 2) Enter Owner And Begin And End Time To Find \n Appointments Beginning Between Said Times \n 3) Then Select Search Appointments Button \n\n\n – View All Appointments: \n 1) Select View All Appointments Button From Main Screen \n2) Then Enter Owners Names And Select View Button \n\n\n\nDate and time should be in the format: \nmm/dd/yyyy hh:mm am/pm \nEnd Time Can Not Be Before Begin Time\n\n \n\nIf the owner entered does not exist the application will attempt to create a new appointment book for owner to save appointments to.</string>
</resources>