<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <Button
        android:id="@+id/addApptButtonMain"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="152dp"

        android:text="@string/add_appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewAllApptsButtonMain"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"

        android:text="@string/view_all_appointments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchApptsButtonMain" />

    <Button
        android:id="@+id/searchApptsButtonMain"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_appointments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addApptButtonMain" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="HELP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAllApptsButtonMain" />

</androidx.constraintlayout.widget.ConstraintLayout>